--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql= true
 server.port=9092
 spring.h2.console.enabled=true
 
